# Agentix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  REFACTOR.md  ROADMAP.md  mkdocs.yml  pyproject.toml
examples/eval-mini-swe-swebench/: README.md  pyproject.toml  runner.py
examples/eval-mini-swe-swebench/tests/: test_runner.py
examples/hello-bundle/: README.md  hello_bundle.py  pyproject.toml
examples/hello-world/: README.md  main.py  pyproject.toml
plugins/abridge/: ARCHITECTURE.md  README.md  ROADMAP.md  pyproject.toml
plugins/abridge/agentix/bridge/: __init__.py  _request_id.py  actions.py  client.py  forward.py  proxy.py  recorder.py  serve.py  sidecar.py  sidecars.py  types.py  util.py
plugins/abridge/agentix/bridge/clients/: __init__.py  _anthropic_transforms.py  anthropic.py  anthropic_from_openai.py  anthropic_to_openai.py  openai.py
plugins/abridge/agentix/bridge/events/: __init__.py
plugins/abridge/agentix/bridge/host/: forwarder.py  pipeline.py
plugins/abridge/agentix/bridge/mitm/: __init__.py  addon.py  cli.py  dispatcher.py  flow.py  hook_client.py
plugins/abridge/agentix/bridge/pipeline/: context.py  defaults.py  interceptors.py  protocols.py  registry.py
plugins/abridge/agentix/bridge/runtime/: forwarder.py  lifecycle.py  namespace.py
plugins/abridge/tests/: conftest.py  test_adapter_anthropic.py  test_anthropic_transform.py  test_anthropic_transform_fixtures.py  test_cc_convert_sidecar.py  test_mitm.py  test_proxy_tracing.py  test_recorder.py  test_serve.py  test_sidecar_forward.py  test_sidecar_reliability.py  test_tito_composition.py  test_tracing.py  test_tunnel_timeout.py
plugins/abridge/tests/fixtures/anthropic_openai/: README.md
plugins/agents/claude-code/: pyproject.toml
plugins/agents/claude-code/src/: agent.py
plugins/agents/opencode/: default.nix  pyproject.toml
plugins/agents/opencode/src/: __init__.py
plugins/agents/opencode/tests/: test_opencode.py
plugins/providers/cape/: README.md  pyproject.toml
plugins/providers/cape/agentix/provider/: cape.py
plugins/providers/cape/tests/: test_cape_provider.py
plugins/providers/docker/: README.md  pyproject.toml
plugins/providers/docker/agentix/provider/: docker.py
plugins/providers/uv/: README.md  pyproject.toml
plugins/providers/uv/agentix/provider/: uv.py
plugins/providers/uv/tests/: test_uv_provider.py
plugins/runtime-basic/: LICENSE  README.md  pyproject.toml
plugins/runtime-basic/agentix/bash/: __init__.py  default.nix
plugins/runtime-basic/agentix/files/: __init__.py  default.nix
plugins/runtime-basic/tests/: test_primitives.py
plugins/tito/: README.md  pyproject.toml
plugins/tito/agentix/tito/: __init__.py  cli.py  config.py  discovery.py  gateway.py  pool.py  server.py  tokenizer.py
plugins/tito/agentix/tito/engine/: __init__.py  compare.py  errors.py  messages.py  pretokenize.py  processing.py  record.py  render.py  session_app.py  trajectory.py  upstream.py
plugins/tito/tests/: test_gateway_http.py  test_gateway_vllm_http.py  test_pool.py  test_pool_routing.py  test_qwen3_golden.py  test_record.py
plugins/tito/tests/package/: test_cli.py  test_config_discovery.py  test_engine.py  test_import_surface.py
sidecars/cc_convert/: .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  RELEASING.md  USAGE.md  USAGE.zh-CN.md
sidecars/cc_convert/.cargo/: config.toml
sidecars/cc_convert/.github/workflows/: release.yml
sidecars/cc_convert/crates/cc_convert_core/: Cargo.toml
sidecars/cc_convert/crates/cc_convert_core/src/: anthropic.rs  error.rs  lib.rs  openai.rs  req_to_openai.rs  resp_to_anthropic.rs  stream.rs  tool_names.rs
sidecars/cc_convert/crates/cc_convert_core/tests/: parity_litellm.rs  parity_response.rs  parity_stream.rs  request_translation.rs  response_translation.rs  stream_translation.rs  vendor_quirks.rs
sidecars/cc_convert/crates/cc_convert_py/: Cargo.toml
sidecars/cc_convert/crates/cc_convert_py/src/: lib.rs
sidecars/cc_convert/crates/cc_convert_sidecar/: Cargo.toml
sidecars/cc_convert/crates/cc_convert_sidecar/src/: lib.rs  main.rs
sidecars/cc_convert/crates/cc_convert_sidecar/tests/: integration.rs
sidecars/cc_convert/playground/: README.md  run_roundtrip.py
sidecars/cc_convert/playground/requests/: 02_reasoning_request.json  03_forced_tool.json  05_simple_text.json  07_multi_turn_text.json  08_agent_loop_with_tools.json  09_long_response.json  10_parallel_tools_text_only.json
sidecars/cc_convert/python/: README.md  pyproject.toml
sidecars/cc_convert/python/cc_convert/: __init__.py  __main__.py  cli.py
sidecars/cc_convert/python/tests/: test_cli_helpers.py  test_parity.py  test_probe_models.py
sidecars/cc_convert/scripts/: regen_fixtures.py  regen_response_fixtures.py  regen_stream_fixtures.py  seed_extra_request_fixtures.py  seed_fixture_inputs.py
sidecars/cc_convert/tests/fixtures/: README.md
sidecars/cc_convert/tests/fixtures/requests/: anthropic_01_plain_user_text.json  anthropic_03_system_blocks_with_cache_control.json  anthropic_04_multi_turn.json  anthropic_05_user_image_base64.json  anthropic_07_assistant_single_tool_use.json  anthropic_08_assistant_two_parallel_tool_uses.json  anthropic_10_user_three_tool_results.json  anthropic_11_user_tool_result_multipart.json  anthropic_12_tools_input_schema.json  anthropic_15_tool_choice_named.json  anthropic_17_thinking_medium.json  anthropic_19_stream_include_usage.json  anthropic_32_agent_tool_loop.json  anthropic_36_user_mixed_content.json  anthropic_37_empty_string_content.json  anthropic_40_tool_choice_none.json  anthropic_41_thinking_high.json  anthropic_42_thinking_low.json  openai_03_system_blocks_with_cache_control.json  openai_05_user_image_base64.json  openai_06_user_image_url.json  openai_09_user_single_tool_result.json  openai_11_user_tool_result_multipart.json  openai_12_tools_input_schema.json  openai_13_long_tool_name.json  openai_16_metadata_user_id.json  openai_17_thinking_medium.json  openai_20_o3_mini_uses_max_completion_tokens.json  openai_32_agent_tool_loop.json  (+9 more)
(+290 files in other folders)
