[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-mini-swe-swebench"
version = "0.1.0"
description = "Evaluate mini-swe-agent on SWE-bench Verified / Lite via Agentix"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/Agentix" }
dependencies = [
    "agentixx",
    "agentix-runtime-basic>=0.1.0",            # bash inside the sandbox
    "agentix-deployment-docker>=0.1.0",        # local-docker backend
    "agentix-agent-mini-swe-agent>=0.1.0",     # sandbox-side runner
    "agentix-dataset-swe>=0.1.0",              # sandbox-side prepare_env + score
    "datasets>=2",                             # host-side: load SWE-bench split
    # mini-swe-agent is invoked host-side too (we *construct* the
    # agent there and pickle-stream the object into the sandbox).
    "mini-swe-agent",
]

# This example is NOT a workspace member (heavy deps would bloat the
# core-dev venv). It path-depends on the monorepo, editable — core /
# plugin edits are live here with no release step.
[tool.uv.sources]
agentixx = { path = "../..", editable = true }
agentix-runtime-basic = { path = "../../plugins/runtime-basic", editable = true }
agentix-deployment-docker = { path = "../../plugins/deployments/docker", editable = true }
agentix-agent-mini-swe-agent = { path = "../../plugins/agents/mini-swe-agent", editable = true }
agentix-dataset-swe = { path = "../../plugins/datasets/swebench", editable = true }

[tool.hatch.build.targets.wheel]
only-include = ["runner.py"]

# Local pytest config — disable the workspace-level cov plugin
# (which expects `agentix` source paths) and pull in `runner.py`
# from the example root so `import runner` resolves in the tests.
[tool.pytest.ini_options]
addopts = []
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
