[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world"
version = "0.1.0"
description = "Hello-Wolrd Example"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "agentixx",
    "agentix-runtime-basic",
    "agentix-provider-docker",
    "agentix-provider-apptainer",
]

[tool.uv.sources]
agentixx = { path = "../..", editable = true }
agentix-runtime-basic = { path = "../../plugins/runtime-basic", editable = true }
agentix-provider-docker = { path = "../../plugins/providers/docker", editable = true }
agentix-provider-apptainer = { path = "../../plugins/providers/apptainer", editable = true }

[tool.agentix]
nix = "default.nix"

# Hatchling cannot infer root-level main.py from the project name, so
# include it explicitly in the wheel that agentix build installs.
[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
