[project]
name = "agentix-agent-claude-code"
version = "0.1.0"
description = "Claude Code agent integration for Agentix sandboxes"
requires-python = ">=3.11"
dependencies = [
    "agentixx",
]

[tool.uv.sources]
agentixx = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "agentix.agents.claude_code" = "src" }
packages = ["agentix.agents.claude_code"]

[tool.agentix]
nix = "default.nix"

[project.entry-points."agentix.nix"]
claude-code = "agentix.agents.claude_code"
