[project]
name = "agentix-agent-opencode"
version = "0.1.0"
description = "opencode terminal coding agent integration for Agentix sandboxes"
requires-python = ">=3.11"
dependencies = [
    "agentixx",
]

[tool.uv.sources]
agentixx = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "agentix.agents.opencode" = "src" }
packages = ["agentix.agents.opencode"]

[tool.agentix]
nix = "default.nix"

[project.entry-points."agentix.nix"]
opencode = "agentix.agents.opencode"
