[package]
name = "cc_convert_sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP sidecar proxy that translates Anthropic Messages requests to OpenAI Chat Completions"

[lib]
name = "cc_convert_sidecar"
path = "src/lib.rs"

[[bin]]
name = "cc_convert_sidecar"
path = "src/main.rs"

[dependencies]
cc_convert_core = { path = "../cc_convert_core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
